<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kit_encoder_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 quadrature encoder driver for Kit de Robotica</description>
  <maintainer email="pedrofuoco6@gmail.com">pedro-fuoco</maintainer>
  <license>MIT</license>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
